src/style.css
/* Fonts */
@font-face {
    font-family: 'choret-fudyng-bubble';
    src: url(./fonts/choret-fudyng-bubble/choret-fudyng-bubble.ttf) format('truetype');
    src: url(./fonts/choret-fudyng-bubble/choret-fudyng-bubble.woff) format('woff');
    src: url(./fonts/choret-fudyng-bubble/choret-fudyng-bubble.woff2) format('woff2');
}
@font-face {
    font-family: 'retrofunk-script';
    src: url(./fonts/retrofunk-script/retrofunk-script.ttf) format('truetype');
    src: url(./fonts/retrofunk-script/retrofunk-script.woff) format('woff');
    src: url(./fonts/retrofunk-script/retrofunk-script.woff2) format('woff2');
}

/* Styling Constants */
:root {
    --light-mode-color-1: #b32740;
    --light-mode-color-2: #e2b1b1;
    --light-mode-color-3: #d1778e;
    --light-mode-color-4: #e34f6a;
    --light-mode-color-5: #e69bb1;
    --light-mode-box-shadow: 5px 5px #e34f6a;
    --light-mode-text-shadow: 1px 1px #e2b1b1;
    --dark-mode-color-1: #291b2c;
    --dark-mode-color-2: #6b2b75;
    --dark-mode-color-3: #b579bf;
    --dark-mode-color-4: #9954c4;
    --dark-mode-color-5: #b482d5;
    --dark-mode-box-shadow: 5px 5px #b579bf;
    --dark-mode-text-shadow: 1px 1px #6b2b75;
    --section-margin: 15px auto;
    --button-padding: 15px 15px;
    --button-border: solid 2px;
    --button-border-radius: 15px;
    --button-font-size: 18px;
    --heading-font: choret-fudyng-bubble;
    --text-font: retrofunk-script;
    --letter-spacing: 1.5px;

}

/* Light Mode (BARBIE) */
body {
    background: var(--light-mode-color-3);
}

#button {
    text-align: center;
    margin: var(--section-margin);
}

#hero {
    text-align: center;
    margin: var(--section-margin);
}

#hero > h3, h2 {
    font-family: var(--text-font);
    letter-spacing: var(--letter-spacing);
    text-shadow: var(--light-mode-text-shadow);
    color: var(--light-mode-color-1);
    margin: 5px;
}

#hero > h1 {
    font-family: var(--heading-font);
    letter-spacing: var(--letter-spacing);
    text-shadow: var(--light-mode-text-shadow);
    color: var(--light-mode-color-1);
    font-size: 40px;
    margin: 5px;
}

#gameboard {
    display: grid;
    grid-template-columns: 1fr;
    margin: var(--section-margin);
}

#gameboard > .gameButtons {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    margin: auto 200px;
    gap: 15px;
}

#gameboard > .gameButtons > .option {
    padding: var(--button-padding);
    margin: 20px 30px;
    border-radius: var(--button-border-radius);
}

#gameboard > .viewboard {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
     margin: 10px 200px;
}

#result {
    text-align: center;
    margin: var(--section-margin);
}

#result > .results {
    font-size: 40px;
    font-family: var(--text-font);
    text-shadow: var(--light-mode-text-shadow);
    color: var(--light-mode-color-1);
}

#restart {
    text-align: center;
    margin: var(--section-margin);
}

#restart > .restartButton {
    border-radius: var(--button-border-radius);
    padding: var(--button-padding);
}

#footer {
    text-align: center;
    margin: 30px auto;
}

#footer > .footer {
    color: var(--light-mode-color-1);

}

#footer > .footer > a {
    text-decoration: none;
    color: var(--light-mode-color-1);
    text-shadow: var(--light-mode-text-shadow);
}

#footer > .footer > a:hover {
    text-decoration: underline;
}

.container {
    max-width: 100;
}

.viewboard > .player {
    text-align: center;
    padding: 15px 15px;
    margin: 15px 15px;
}

.viewboard > .player > .contender {
    font-size: 30px;
    font-family: var(--text-font);
    text-shadow: var(--light-mode-text-shadow);
    color: var(--light-mode-color-1);
}

.viewboard > .player > .user {
    font-size: 100px;
    margin: 30px auto;
    color: var(--light-mode-color-1);
}

.viewboard > .pc {
    text-align: center;
    padding: 15px 15px;
    margin: 15px 15px;
}

.viewboard > .pc > .contender {
    font-size: 30px;
    font-family: var(--text-font);
    text-shadow: var(--light-mode-text-shadow);
    color: var(--light-mode-color-1);
}

.viewboard > .pc > .user {
    font-size: 100px;
    margin: 30px auto;
    color: var(--light-mode-color-1);
}

.button, .option, .restartButton {
    padding: var(--button-padding);
    border: var(--button-border);
    border-radius: var(--button-border-radius);
    box-shadow: var(--light-mode-box-shadow);
    font-size: var(--button-font-size);
    font-family: var(--text-font);
    color: var(--light-mode-color-4);
    background-color: var(--light-mode-color-2);
    letter-spacing: var(--letter-spacing);
    transition: all 150ms ease-in-out;
}

.button:hover, .option:hover, .restartButton:hover {
    color: var(--light-mode-color-2);
    background-color: var(--light-mode-color-4);
}

/* Dark Mode */
.dark {
    background: var(--dark-mode-color-1);
}

.dark #hero > h3, .dark #hero > h2 {
    color: var(--dark-mode-color-5);
    text-shadow: var(--dark-mode-text-shadow);
}

.dark #hero > h1 {
    color: var(--dark-mode-color-5);
    text-shadow: var(--dark-mode-text-shadow);
}

.dark .viewboard > .player > .contender{
    color: var(--dark-mode-color-5);
    text-shadow: var(--dark-mode-text-shadow);
}

.dark .viewboard > .player > .user {
    font-size: 100px;
    margin: 30px auto;
    color: var(--dark-mode-color-5);
}

.dark .viewboard > .pc > .contender{
    color: var(--dark-mode-color-5);
    text-shadow: var(--dark-mode-text-shadow);
}

.dark .viewboard > .pc > .user {
    font-size: 30px;
    size: 100px;
    margin: 30px auto;
    color: var(--dark-mode-color-5);
}

.dark #result > .results {
    color: var(--dark-mode-color-5);
    text-shadow: var(--dark-mode-text-shadow);
}

.dark #footer > .footer {
    color: var(--dark-mode-color-5)
}

.dark #footer > .footer > a {
    text-decoration: none;
    color: var(--dark-mode-color-5);
    text-shadow: var(--dark-mode-text-shadow);
}

.dark #footer > .footer > a:hover {
    text-decoration: underline;
}

.dark .button, .dark .option, .dark .restartButton {
    color: var(--dark-mode-color-3);
    background-color: var(--dark-mode-color-2);
    box-shadow: var(--dark-mode-box-shadow);
}

.dark .button:hover, .dark .option:hover, .dark .restartButton:hover {
    color: var(--dark-mode-color-2);
    background-color: var(--dark-mode-color-3);
}

@media (max-width: 450px) {

    #button > .button {
        padding: 8px;
    }

    #hero {
        margin: 10px auto;
    }

    #gameboard {
        grid-template-columns: repeat(2, 1fr);
    }

    #gameboard > .gameButtons{
        grid-template-columns: 1fr;
        margin: 15px auto;
    }

    #gameboard > .gameButtons > .option {
        margin: 10px ;
        padding: 8px;
    }

    #gameboard > .viewboard {
        grid-template-columns: 1fr;
        gap: 10px;
    }

    #result {
        margin: 10px auto;
    }

    #restart> .restartButton {
        padding: 8px;
    }

    .viewboard > .player {
        margin: 8px;
        padding: 8px;
    }

    .viewboard > .pc {
        margin: 8px;
        padding: 8px;
    }

    .viewboard > .player > .contender {
        font-size: 18px;
        margin: 10px auto;
    }

    .viewboard > .pc > .contender {
        font-size: 18px;
        margin: 10px auto;
    }

    .viewboard > .player > .user {
        font-size: 50px;
        margin: 18px auto;
    }

    .viewboard > .pc > .user {
        font-size: 50px;
        margin: 18px auto;
    }
}
    

